# flask

./: CLAUDE.md  main.py  requirements.txt
Advanced Flask Functionality/Accounts and Authentication/Travel Sites/: app.py  forms.py  models.py  routes.py
Advanced Flask Functionality/Accounts and Authentication/Travel Sites/instance/: my_database.db
Advanced Flask Functionality/Accounts and Authentication/Travel Sites/templates/: base.html  landing_page.html  login.html  register.html  user.html
Full-Stack Engineer/Fundamentals of CSS/Flexbox: To-Do App/: style.css
Full-Stack Engineer/Learn CSS: Display and Positioning/: style.css
Introduction to Flask/Jinja2 Templates and Forms/Tourist Attractions/: app.py  forms.py  locations.py
Introduction to Flask: Adopt a Pet/files/: app.py
Introduction to SQL and Databases for Back-End Web Apps/Databases in Flask/FlaskFM/: add_data.py  app.py  models.py  routes.py
Learn Flask/: pyproject.toml
Learn Flask/Introduction to Flask/Introduction to Flask/Adopt a Pet/: app.py  helper.py
Learn Flask/Introduction to Flask/Jinja2 Templates and Forms/Tourist Attractions/: app.py
Learn Flask/Introduction to Flask/Jinja2 Templates and Forms/Tourist Attractions/static/: styles.css
Learn Flask/Introduction to SQL and Databases for Back-End Web Apps/Databases in Flask/FlaskFM/static/: my_style.css
Learn Flask/Introduction to SQL and Databases for Back-End Web Apps/Databases in Flask/FlaskFM/templates/: dashboard.html  profile.html
Learn Intermediate Python 3/Iterators & Generators/Event Coordinator/: script.py
(+94 files in other folders)
