[project]
name = "tlfc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "blinker>=1.8.2",
    "click>=8.1.8",
    "dnspython>=2.6.1",
    "email-validator>=2.3.0",
    "flask>=3.0.3",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.1",
    "idna>=3.11",
    "importlib-metadata>=8.5.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "markupsafe>=2.1.5",
    "sqlalchemy>=2.0.46",
    "typing-extensions>=4.13.2",
    "werkzeug>=3.0.6",
    "wtforms>=3.1.2",
    "zipp>=3.20.2",
]
